--- a/.github/workflows/streak-keeper.yml
+++ b/.github/workflows/streak-keeper.yml
@@ -2,7 +2,7 @@ name: Keep my Duolingo streak
 
 on:
   schedule:
-    - cron: '0 9 * * *'
+    - cron: '1 * * * *'
   workflow_dispatch:
     inputs: {}
 
@@ -15,7 +15,7 @@ jobs:
       - run: bun index.js
         env:
           DUOLINGO_JWT: ${{ secrets.DUOLINGO_JWT }}
-          LESSONS: 1
+          LESSONS: 50
   delete-old-runs:
     runs-on: ubuntu-latest
     permissions:
